[gd_scene load_steps=3 format=3 uid="uid://dkafndsdwdiuy"]

[ext_resource type="FontFile" uid="uid://dibh2m6e6wqpq" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="1_1c2of"]
[ext_resource type="Script" path="res://Menus/quick_menu.gd" id="1_lbo6p"]

[node name="Quick_Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
script = ExtResource("1_lbo6p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -1920.0
offset_top = -1080.0
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1c2of")
theme_override_font_sizes/font_size = 120
text = "Resume"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1c2of")
theme_override_font_sizes/font_size = 120
text = "Save"

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1c2of")
theme_override_font_sizes/font_size = 120
text = "Load"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1c2of")
theme_override_font_sizes/font_size = 120
text = "Options"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1c2of")
theme_override_font_sizes/font_size = 120
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
